[package]
name = "container-runtime-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
publish = false

[dependencies]
shared_types = { path = "../shared_types" }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
