[package]
name = "docker_manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
publish = false

[dependencies]
# Docker API
bollard = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures-util = { workspace = true }

# HTTP client (for health checks)
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID
uuid = { workspace = true }

# Date/time
chrono = { workspace = true }

# Utilities
dashmap = { workspace = true }
moka = { version = "0.12", features = ["future"] }

# Shared types
shared_types = { path = "../shared_types" }

# Runtime API (always needed)
container-runtime-api = { path = "../container-runtime-api" }

# Async runtime
async-trait = { workspace = true }

# Kubernetes runtime support (feature-gated)
kube = { version = "0.98", features = ["runtime", "client", "kube-runtime", "config"], optional = true }
k8s-openapi = { version = "0.24", features = ["v1_30"], optional = true }

[features]
default = []
# Kubernetes runtime support
kubernetes = ["kube", "k8s-openapi"]
# 🔧 eBPF 调试模式：启用容器特权，允许使用 eBPF 诊断工具
# 警告：仅在开发调试时使用，生产环境请勿启用
ebpf-debug = []
