[package]
name = "http_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
shared_types = { path = "../shared_types" }
agent-client-protocol.workspace = true
agent_servers = { path = "../agent_servers" }
acp_thread = { path = "../acp_thread" }
chrono.workspace = true
dashmap.workspace = true
agent_client_protocol.workspace = true
