[package]
name = "nuwax_parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
reqwest.workspace = true
futures = { workspace = true }
sha2.workspace = true
hex.workspace = true
walkdir.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
derive_builder = { workspace = true }
tempfile = "3.8"
regex = "1.0"
file-format ={version = "0.28",features = ["reader-txt"] }
content_inspector = "0.2.4"
zip = "2.1"
utoipa = { workspace = true }



[lib]
name = "nuwax_parser"
path = "src/lib.rs"
