[package]
name = "pingora-proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "pingora_proxy"
path = "src/lib.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
structopt = "0.3"
axum = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
thiserror = "2.0"

# Pingora dependencies - 真正的 Pingora 库
pingora = { version = "0.6", features = ["lb"] }
pingora-core = "0.6"
pingora-http = "0.6"
pingora-proxy = "0.6"
pingora-load-balancing = "0.6"
async-trait = "0.1"

# HTTP client for fallback
reqwest = { version = "0.12", features = ["json"] }