[package]
name = "rcoder-telemetry"
version = "0.1.0"
edition = "2021"
description = "Shared telemetry module for rcoder services (Prometheus + OTLP)"
authors = ["soddy"]
license = "MIT"

[dependencies]
# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Prometheus
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Axum 中间件
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }

# gRPC (Tonic)
tonic = { workspace = true }

# 其他
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-appender = "0.2"
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
pin-project-lite = "0.2"

[features]
default = []
# 启用完整的 OTLP 功能
full = []

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
