[package]
name = "rcoder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "rcoder"
path = "src/lib.rs"

[features]
default = []

# 调试功能：启用 /debug/* 路由，用于开发和问题排查
# 生产环境默认不启用，需要显式添加 --features debug
debug = []

[dependencies]
# Internal crates
shared_types = { path = "../shared_types" }
acp-adapter = { path = "../acp_adapter" }
rcoder-proxy = { path = "../rcoder-proxy" }
docker_manager = { path = "../docker_manager" }
duckdb_manager = { path = "../duckdb_manager" }
rcoder-telemetry = { workspace = true }

clap = { workspace = true }
# ACP Protocol
agent-client-protocol = { workspace = true }
async-trait = "0.1"
parking_lot = "0.12"
tempfile = { workspace = true }

# HTTP server
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
hyper = { version = "1.8", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
futures = { workspace = true }
tokio-stream = "0.1"
async-stream = "0.3"

# gRPC Client
tonic = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "=0.9.33"

derive_builder = { workspace = true }

# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "env-filter",
    "json",
] }
tracing-appender = "0.2"
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
dashmap = { workspace = true }
bytes = "1.0"
futures-util = { workspace = true }
piper = "0.2"
base64 = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
bollard = "0.19"

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
axum-tracing-opentelemetry = { workspace = true }

# File system
tokio-fs = { workspace = true }
path-clean = { workspace = true }

# OpenAPI documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

ringbuf = { workspace = true }

# Random and hashing
rand = "0.9"
md5 = "0.8"

# Cache
moka = { workspace = true }
