[package]
name = "shared_types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []

[dependencies]

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
agent-client-protocol.workspace = true
chrono.workspace = true

# OpenAPI documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "json"] }

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

thiserror = { workspace = true }

base64 = "0.22"

derive_builder= { workspace = true }

reqwest = { version = "0.12", features = ["json"] }

anyhow = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
axum-tracing-opentelemetry = { workspace = true }


# HTTP server
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
futures = { workspace = true }
tokio-stream = "0.1"
async-stream = "0.3"

# gRPC - 使用 tonic 0.14 运行时
tonic = { version = "0.14.2", features = ["tls-native-roots"] }
tonic-prost = "0.14"  # 添加 tonic-prost 依赖
prost = "0.14"
prost-types = "0.14"

[build-dependencies]
# 使用 tonic-prost-build 而不是 tonic-build！
tonic-prost-build = "0.14"
