[package]
name = "shared_types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []

[dependencies]

serde.workspace = true
serde_json.workspace = true
dashmap = { workspace = true }
uuid.workspace = true
# ACP Protocol - 官方 SDK（完全 Send-safe，无需 LocalSet）
agent-client-protocol = { workspace = true }
chrono.workspace = true

# OpenAPI documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "env-filter",
    "json",
] }

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

thiserror = { workspace = true }

# Validation
garde = { version = "0.22.1", features = ["derive"] }

base64 = { workspace = true }

derive_builder = { workspace = true }

reqwest = { workspace = true }

anyhow = { workspace = true }

# URL 解析
url = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
axum-tracing-opentelemetry = { workspace = true }

# 🚀 无锁配置热更新
arc-swap = "1.8"

# i18n (国际化)
rust-i18n = { workspace = true }

# URL query string 解析
serde_urlencoded = "0.7"


# HTTP server
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
futures = { workspace = true }
futures-util = { workspace = true }
tokio-stream = "0.1"

# async trait for service trait definition
async-trait = { workspace = true }

# gRPC - 使用 tonic 0.14 运行时
tonic = { version = "0.14.2", features = ["tls-native-roots"] }
tonic-prost = "0.14"                                            # 添加 tonic-prost 依赖
prost = "0.14"
prost-types = "0.14"

[build-dependencies]
# 使用 tonic-prost-build 而不是 tonic-build！
tonic-prost-build = "0.14"
